2005-06-20  Federico Mena Quintero  <federico@ximian.com>

	* modulesets/gnome-2.10.modules: Use the gnome-2-10 branch for
	gnome-session.

2005-06-20  James Henstridge  <james@jamesh.id.au>

	* patches/howl-1.0.0-buildfix.patch: the path.

	* modulesets/gnome-2.10.modules: same here.

	* modulesets/gnome-2.12.modules: update to Howl 1.0.0.  Include a
	patch to fix --disable-static build bustage.  Fix bug #161153.

2005-06-20  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop.modules: Added dbusmm.

2005-06-18  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: Comment-out the libgda 
	dependencies for gnumeric, glom, and gnome-python-extras, 
	because they need libgda-1.2, not HEAD.

2005-06-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* modulesets/gnome-2.12.modules: Changed libgda back to HEAD,
	libgnomedb and mergeant both use libgda HEAD.

2005-06-17  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: Changed libgda back to the 
	release-1-2-branch branch, because I can't find anything that 
	is using HEAD.

2005-06-16  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome28.modules: same here.

	* modulesets/gnome-2.10.modules: correctly use dbus-0.23 and hal-0.4

	* modulesets/freedesktop.modules (dbus-0.23, hal-0.4): fix rules
	so that these old versions get checked out correctly.  Fixes bug
	#307673.

2005-06-15  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom, gnomemm/libgdamm: Remove 
	the dependency on libgda, because it depends on libgda-1.2 (which 
	people will have to get from packages) instead of the libgda 2.0 
        (HEAD) that jhbuild now has, because I see no way to do parallel 
	install in jhbuild.

2005-06-15  Mikael Hallendal  <micke@imendio.com>

	* modulesets/gnome-2.12.modules: Make eel depend on gnome-menus

2005-06-15  Mikael Hallendal  <micke@imendio.com>

	* modulesets/gnome-2.12.modules: Make eel depend on gnome-desktop.
