@@ -1,3 +1,12 @@
+2005-06-21  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/monkeypatch.py: a module to add features to the standard
+	library that don't exist in old versions.  At the moment, it just
+	includes the True/False fix.
+
+	* jhbuild/__init__.py: move monkeypatch code out into a separate
+	file.
+
 2005-06-20  Federico Mena Quintero  <federico@ximian.com>
 
 	* modulesets/gnome-2.10.modules: Use the gnome-2-10 branch for
